2004-10-28  Carl Sorensen  <carldsorensen@comcast.net>

	* Documentation/user/notation.itely (Fret diagrams): add extra
	notes to example to avoid collisions between fret diagrams.

2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/notation.itely (Automatic note splitting):
	note about lyrics. 

	* Documentation/user/converters.itely (Invoking convert-ly): note
	about version numbers. 

	* scripts/abc2ly.py (dump_score): revise lyric dumping

	* scripts/mup2ly.py (pre_processor_commands): always open file.

	* scripts/etf2ly.py (Frame.calculate): always close \grace.
	(Etf_file.dump): add \version

	* VERSION: 2.3.25 released.

	* lily/scm-option.cc: add 'resolution to ly:get-option argument
	list.

2004-10-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stencil-scheme.cc (LY_DEFINE): add ly:stencil-origin

2004-10-28  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/music-glossary.tely: More fixes to improve
	appearance with DVI output.

	* scripts/lilypond-book.py (compose_ly): Use 0.4in for
	EXAMPLEINDENT.  This is the maximum value for quotation environments
	used in `texinfo.tex' -- many warnings in lilypond.dvi are now gone.

2004-10-27  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/music-glossary.tely: Revised.

2004-10-26  Carl Sorensen  <carldsorensen@comcast.net>

	* input/test/fret-diagram.ly: insert breaks, remove raggedright to
	improve fret diagram spacing in printed output.

	* Documentation/user/notation.itely (Fret diagrams): Remove raggedright
	from options for the example so fret-diagrams won't overlap
	one another.

2004-10-26  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py: Some additional formatting for
	orthogonality.
	(ly_options) [*]: Format strings.
	[RAGGEDRIGHT]: Don't set `indent'.  This is now properly handled
	by `compose_ly'.
	(output) [LATEX][OUTPUT]: Format string and simplify.
	(PREAMBLE_LY, FRAGMENT_LY): Format string.
	(classic_lilypond_book_compatibility): Take key/value pair as