@@ -12,6 +12,7 @@ Architecture: any
 Replaces: lilypond1.3
 Provides: lilypond1.3
 Depends: ${shlibs:Depends}, tetex-bin (>= 1.0.5-1), tetex-extra (>= 1.0-1), python, guile-1.6 | guile, ${misc:Depends}, lilypond-data (= ${Source-Version})
+# , ec-fonts-mftraced (>= 1.0.5-1)
 Recommends: lilypond-doc
 Conflicts: lilypond1.3 (<= 1.3.132-1), musixtex-fonts
 Description: A program for typesetting sheet music
