@@ -18,7 +18,7 @@ Buildrequires: t1utils bison flex mftrace ImageMagick
 Buildrequires: texinfo >= 4.6
 Buildrequires: guile-devel >= 1.6.4-8
 Requires: tetex  tetex-latex libstdc++ python  tetex-dvips tetex-latex
-Requires: guile >= 1.6.4-8 ec-fonts-mftraced >= 1.0.4
+Requires: guile >= 1.6.4-8 ec-fonts-mftraced >= 1.0.5
 
 %description
 LilyPond lets you create music notation.  It produces
