@@ -1,3 +1,13 @@
+2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/ledger-line-spanner.cc (print): swap linear_combination
+	arguments, effectively shortens ledger line. 
+
+	* Documentation/user/GNUmakefile
+	($(outdir)/lilypond/lilypond.html): use find to remove files.
+
+	* lily/main.cc: --no-pages option.
+
 2004-10-28  Carl Sorensen  <carldsorensen@comcast.net>
 
 	* Documentation/user/notation.itely (Fret diagrams): add extra
